--- a/desafio/project/style.css
+++ b/desafio/project/style.css
@@ -102,6 +102,7 @@ header > p {
     padding-left: 10px;
     padding-right: 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.164);
+    padding-bottom: 30px;
 
 }
 nav{
