--- a/exercicios/ex-13/estilo/style.css
+++ b/exercicios/ex-13/estilo/style.css
@@ -1,87 +1,99 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
- 
- :root{
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2: 'Passion One', cursive;
     --fonte3: 'Sriracha', cursive;
- }   
+}
 
-
-*/ {
+* {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
+
 html, body {
-    font-family: var(--fonte1);
     min-height: 100vh;
-    background-color: gray;
+    background-color: darkgray;
+    font-family: var(--fonte1);
 }
-header{
+
+header {
     background-color: black;
     color: white;
     text-align: center;
 }
+
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 6.5vh;
+    font-size: 10vw;
 }
-header > p {padding-bottom: 50px;}
-a{
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
     color: white;
-    text-decoration: white;
+    text-decoration: none;
     font-weight: bolder;
 }
-header a:hover, footer a:hover{
+
+header a:hover, footer a:hover {
     text-decoration: underline;
-    background-color: green;
-    transition-duration: .7s;
 }
-section{
+
+section {
     padding-top: 10vh;
     padding-bottom: 10vh;
-    padding-left: 50px;
+    line-height: 2em;
+    padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 2vh;
+    font-size: 3.5vw;
 }
+
 section > p {
-    padding-top: 2em;
     padding-bottom: 2em;
 }
-section.normal{
+
+section.normal {
     background-color: white;
     color: black;
 }
-section.imagem{
-    background-color: rgba(44, 43, 43, 0.384);
+
+section.imagem {
+    background-color: rgb(51, 51, 51);
     color: white;
-    box-shadow: inset 6px 6px 13px 0px rgb(49, 48, 48);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
     background-attachment: fixed;
 }
+
 section.imagem > p {
     display: inline-block;
-    width: 400px;
-    background-color: rgba(36, 34, 34, 0.637);
-    text-shadow: 1px 2px 0px  black;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 }
-section#img01{
-    background-image: url(../imagens/background001.jpg);
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
     background-position: right center;
-    background-size: cover;
-}
-section#img02{
-    background-image: url(../imagens/background002.jpg);
-    background-size: cover;
+    
 }
 
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
+}
 
-
-
-footer{
+footer {
     background-color: black;
     color: white;
     text-align: center;
